# src/main/java/com/notabusiness/app/controller/UserController.java
@@ -11,8 +11,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.UUID;
-
 @RestController
 @RequiredArgsConstructor
 @Slf4j
@@ -25,22 +23,22 @@ public class UserController implements AuthenticationApi {
     private static final String RESPONSE_BAD_REQUEST = "username or password can not be empty";
 
     @Override
-    public RegisterRequest register(UUID transactionId, RegisterRequest registerRequest) {
+    public RegisterRequest register(RegisterRequest registerRequest) {
         log.info("call register() " + registerRequest);
         Users user = modelMapper.map(registerRequest, Users.class);
         if (user.getUsername() == null || user.getUsername().isBlank()
                 || user.getPassword() == null || user.getPassword().isBlank()) {
             log.error(RESPONSE_BAD_REQUEST);
-            throw new ApplicationException(RESPONSE_BAD_REQUEST, transactionId);
+            throw new ApplicationException(RESPONSE_BAD_REQUEST);
         }
         return modelMapper.map(userService.register(user), RegisterRequest.class);
     }
 
     @Override
-    public LoginResponse login(UUID transactionId, String username, String password) {
+    public LoginResponse login(String username, String password) {
         if (username == null || username.isBlank() || password == null || password.isBlank()) {
             log.error(RESPONSE_BAD_REQUEST);
-            throw new ApplicationException(RESPONSE_BAD_REQUEST, transactionId);
+            throw new ApplicationException(RESPONSE_BAD_REQUEST);
         }
         return userService.verify(username, password);
     }
